@@ -62,20 +62,21 @@ static void profReport(char *fmt, ...) {
 #endif
 
 jstring jri_putString(JNIEnv *env, SEXP e, int ix) {
-	return (TYPEOF(e)!=STRSXP || LENGTH(e)<=ix)?0:(*env)->NewStringUTF(env, CHAR_UTF8(STRING_ELT(e,ix)));
+    return (TYPEOF(e) != STRSXP || LENGTH(e) <= ix || STRING_ELT(e, ix) == R_NaString) ? 0 : (*env)->NewStringUTF(env, CHAR_UTF8(STRING_ELT(e, ix)));
 }
 
 jarray jri_putStringArray(JNIEnv *env, SEXP e)
 {
-    if (TYPEOF(e)!=STRSXP) return 0;
+    if (TYPEOF(e) != STRSXP) return 0;
     {
-        int j=0;
-        jobjectArray sa=(*env)->NewObjectArray(env, LENGTH(e), (*env)->FindClass(env, "java/lang/String"), 0);
+        int j = 0;
+        jobjectArray sa = (*env)->NewObjectArray(env, LENGTH(e), (*env)->FindClass(env, "java/lang/String"), 0);
         if (!sa) { jri_error("Unable to create string array."); return 0; }
-        while (j<LENGTH(e)) {
-            jobject s=(*env)->NewStringUTF(env, CHAR_UTF8(STRING_ELT(e,j)));
-            _dbg(rjprintf (" [%d] \"%s\"\n",j,CHAR_UTF8(STRING_ELT(e,j))));
-            (*env)->SetObjectArrayElement(env,sa,j,s);
+        while (j < LENGTH(e)) {
+	    SEXP elt = STRING_ELT(e, j);
+	    jobject s = (elt == R_NaString) ? 0 : (*env)->NewStringUTF(env, CHAR_UTF8(STRING_ELT(e,j)));
+            _dbg(if (s) rjprintf (" [%d] \"%s\"\n",j,CHAR_UTF8(STRING_ELT(e,j))); else rjprintf(" [%d] NA\n", j));
+            (*env)->SetObjectArrayElement(env, sa, j, s);
             j++;
         }
         return sa;
@@ -227,22 +228,22 @@ jarray jri_putDoubleArray(JNIEnv *env, SEXP e)
 
 /** jobjRefInt object : string */
 SEXP jri_getString(JNIEnv *env, jstring s) {
-  SEXP r;
-  const char *c;
-
-  if (!s) return R_NilValue;
-  profStart();
-  c=(*env)->GetStringUTFChars(env, s, 0);
-  if (!c) {
-      jri_error("jri_getString: can't retrieve string content");
-      return R_NilValue;
-  }
-  PROTECT(r=allocVector(STRSXP,1));
-  SET_STRING_ELT(r, 0, mkCharUTF8(c));
-  UNPROTECT(1);
-  (*env)->ReleaseStringUTFChars(env, s, c);
-  _prof(profReport("jri_getString:"));
-  return r;
+    SEXP r;
+    const char *c;
+    
+    if (!s) return ScalarString(R_NaString);
+    profStart();
+    c = (*env)->GetStringUTFChars(env, s, 0);
+    if (!c) {
+	jri_error("jri_getString: can't retrieve string content");
+	return R_NilValue;
+    }
+    PROTECT(r = allocVector(STRSXP,1));
+    SET_STRING_ELT(r, 0, mkCharUTF8(c));
+    UNPROTECT(1);
+    (*env)->ReleaseStringUTFChars(env, s, c);
+    _prof(profReport("jri_getString:"));
+    return r;
 }
 
 SEXP jri_installString(JNIEnv *env, jstring s) {
@@ -263,10 +264,10 @@ SEXP jri_installString(JNIEnv *env, jstring s) {
 }
 
 jstring jri_putSymbolName(JNIEnv *env, SEXP e) {
-	SEXP pn;
+    SEXP pn;
     if (TYPEOF(e)!=SYMSXP) return 0;
-	pn=PRINTNAME(e);
-	return (TYPEOF(pn)!=CHARSXP)?0:(*env)->NewStringUTF(env, CHAR_UTF8(pn));
+    pn=PRINTNAME(e);
+    return (TYPEOF(pn)!=CHARSXP)?0:(*env)->NewStringUTF(env, CHAR_UTF8(pn));
 }
 
 /** calls .toString() of the object and returns the corresponding string java object */
@@ -314,40 +315,37 @@ SEXP jri_getObjectArray(JNIEnv *env, jarray o) {
 
 /** get contents of the object array in the form of int* */
 SEXP jri_getStringArray(JNIEnv *env, jarray o) {
-  SEXP ar;
-  int l,i;
-  const char *c;
+    SEXP ar;
+    int l, i;
+    const char *c;
 
-  profStart();
-  _dbg(rjprintf(" jarray %d\n",o));
-  if (!o) return R_NilValue;
-  l=(int)(*env)->GetArrayLength(env, o);
-  _dbg(rjprintf("convert string array of length %d\n",l));
-  if (l<1) return R_NilValue;
-  PROTECT(ar=allocVector(STRSXP,l));
-  i=0;
-  while (i<l) {
-    jobject sobj=(*env)->GetObjectArrayElement(env, o, i);
-    c=0;
-    if (sobj) {
-      /* we could (should?) check the type here ...
-      if (!(*env)->IsInstanceOf(env, sobj, javaStringClass)) {
-	printf(" not a String\n");
-      } else
-      */
-      c=(*env)->GetStringUTFChars(env, sobj, 0);
+    profStart();
+    _dbg(rjprintf(" jarray %d\n",o));
+    if (!o) return R_NilValue;
+    l = (int)(*env)->GetArrayLength(env, o);
+    _dbg(rjprintf("convert string array of length %d\n",l));
+    PROTECT(ar = allocVector(STRSXP,l));
+    for (i = 0; i < l; i++) {
+	jobject sobj = (*env)->GetObjectArrayElement(env, o, i);
+	c = 0;
+	if (sobj) {
+	    /* we could (should?) check the type here ...
+	       if (!(*env)->IsInstanceOf(env, sobj, javaStringClass)) {
+	       printf(" not a String\n");
+	       } else
+	    */
+	    c = (*env)->GetStringUTFChars(env, sobj, 0);
+	}
+	if (!c)
+	    SET_STRING_ELT(ar, i, R_NaString); /* this is probably redundant since the vector is pre-filled with NAs, but just in case ... */
+	else {
+	    SET_STRING_ELT(ar, i, mkCharUTF8(c));
+	    (*env)->ReleaseStringUTFChars(env, sobj, c);
+	}
     }
-    if (!c)
-      SET_STRING_ELT(ar, i, R_NaString);
-    else {
-      SET_STRING_ELT(ar, i, mkCharUTF8(c));
-      (*env)->ReleaseStringUTFChars(env, sobj, c);
-    }
-    i++;
-  }
-  UNPROTECT(1);
-  _prof(profReport("RgetStringArrayCont[%d]:",o));
-  return ar;
+    UNPROTECT(1);
+    _prof(profReport("RgetStringArrayCont[%d]:",o));
+    return ar;
 }
 
 /** get contents of the integer array object (int) */
